--- a/src/main/webapp/quiz/quiz_applying.html
+++ b/src/main/webapp/quiz/quiz_applying.html
@@ -229,6 +229,19 @@
                 }
 
                 section.append(template);
+
+                if (question.style != "") {
+                    var el = document.getElementById(question.id);
+                    if (el != null) {
+                        var before = el.getAttribute ("style");
+                        if (before != "") {
+                            before += ";"
+                        }
+                        el.setAttribute ('style', before + question.style);
+                    }
+                }
+
+
                 if (question.format == "0") {
                     // reduzido left
                    $("#labelparagraph"+question.id).remove();
