--- a/src/main/webapp/quiz_admin/edit_question.html
+++ b/src/main/webapp/quiz_admin/edit_question.html
@@ -129,6 +129,14 @@
             </div>
           </div>
           <div class="clearfix">
+              <label for="quizQuestionStyle">Html Style</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <textarea class="xlarge" id="quizQuestionStyle" name="quizQuestionStyle" size="16"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="clearfix">
               <label for="obs">Observação</label>
               <div class="input">
                 <div class="input-prepend">
