http request - contself

--- a/src/main/webapp/financial/salesIntegration.html
+++ b/src/main/webapp/financial/salesIntegration.html
@@ -5,6 +5,7 @@
   <script src="/js/jquery.tablesorter.pager.js"></script>
   <script type="text/javascript">
   $(function () {
+    $("#start").val('23/11/2018');
     $("#send").click(function(){
 /*
       $.ajax({
