--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -309,7 +309,7 @@
       <div>
         <br>
         Este relatório inclui <b>todos</b> os lançamentos financeiros que estão na tabela,<br/>
-        diferente da visão de DRE nos relatórios que exibe só os efetivamente pagos.
+        diferente da visão de DRE nos relatórios que exibe só os lançamentos das contas marcadas como faturadas.
       </div>
       <br/>
       <input class="btn primary" type="button" id='print_message' value='Imprimir' />
