paymenttype - list pagination

--- a/src/main/webapp/financial/payment_forms_list.html
+++ b/src/main/webapp/financial/payment_forms_list.html
@@ -95,4 +95,13 @@
 			</span>
 		</tbody>
 	</table>
+	<span class='lift:PaymentTypesSnippet.paginate'>
+		<ul class='pagination'>
+			<li class="fisrt"><nav:first/></li>
+			<li class="prev"><nav:prev/></li>
+			<li class="next"><nav:zoomedpages/></li>
+			<li class="next"><nav:next/></li>
+			<li class="last"><nav:last/></li>
+		</ul>
+	</span>
 </div>
