--- a/src/main/webapp/financial_admin/accounts_report.html
+++ b/src/main/webapp/financial_admin/accounts_report.html
@@ -73,6 +73,15 @@
             </div>
           </div>
         </div>
+        <div class="clearfix">
+            <label for="status_select_filter">Status</label>
+            <div class="input">
+              <select id='status_select_filter' multiple="multiple" name='status_select_filter'>
+                  <option selected="selected" value='true'>Pagos</option>
+                  <option selected="selected" value='false'>Planejados</option>
+              </select>
+            </div>
+        </div>
         <div class="clearfix lift:SecuritySnippet.hasUnitModule">
           <label for="unit">Unidade</label>
            <div class="input">
