auxiliar property - free for pet users

--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -599,15 +599,13 @@
                                 <span class="help-block">Indica que este parceiro é um usuário que acessa o <span class='system-name'></span></span>
                             </div>
                         </div>
-                        <span class="lift:SecuritySnippet.isPeopleManager">
-                        <div class="lift:SecuritySnippet.hasAuxiliarModule clearfix">
+                        <div class="lift:SecuritySnippet.auxiliarProperty clearfix">
                             <label for="is_auxiliar">É <span data-i18n='Assistente'></span></label>
                             <div class="input">
                                 <select name="is_auxiliar"></select>
                                 <span class="help-block">Indica que este parceiro é um <span data-i18n='Assistente'></span></span>
                             </div>
                         </div>
-                        </span>
                     </div>
                 </div>
                 <div class="tab_content row" id="fidelity">
