presumed_income_product deprecated - treatment_create_update bug fix

--- a/src/main/webapp/financial_admin/presumed_income_product.html
+++ b/src/main/webapp/financial_admin/presumed_income_product.html
@@ -1,3 +1,6 @@
+<!-- 
+NÂO USA MAIS AGORA o ANTIGO DE SERVIÇO DEIXA ESCOLHER
+-->
 <div id="main" class="lift:surround?with=calendar;at=content">
   <link rel="stylesheet" type="text/css" href="/select2/select2.css" />
   <script src="/select2/select2.js"></script><script src="/select2/select2_locale_pt-BR.js"></script>
