--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -219,15 +219,16 @@
           </a>
         </li>           
         <li>
-          <a href="/financial_admin/presumed_income" target="_blancccck" class="_popover" rel="popover" data-content="Lucro Presumido de Serviço" data-original-title="Lucro">
+          <a href="/financial_admin/presumed_income" target="_blancccck" class="_popover" rel="popover" data-content="Lucro Presumido de Serviço/Produto" data-original-title="Lucro Presumido">
             <img width='32' src="/images/activity_type.png"/>
           </a>
         </li>
-        <li>
+        <!--li>
+          EXCLUIDO - O DE CIMA AGORA ALTERNA ENTRE PROD E SERV
           <a href="/financial_admin/presumed_income_product" target="_blancccck" class="_popover" rel="popover" data-content="Lucro Presumido de Produtos" data-original-title="Produtos">
             <img width='32' src="/images/categorie.png"/>
           </a>
-        </li>       
+        </li-->       
         <li>
           <a href="/financial/commission_sumary" target="_blancccck" class="_popover" rel="popover" data-content="Resumo de Comissão" data-original-title="Resumo de Comissão">
             <img width='32' src="/images/sum.png"/>
