--- a/src/main/webapp/command_full/user_command_full.html
+++ b/src/main/webapp/command_full/user_command_full.html
@@ -217,7 +217,7 @@
                     <div class="inline-inputs">
                       <div style="float:left; padding-right:10px" class="input-prepend">
                         <span class="add-on hide_mobile"><img width="16" src="/images/categorie.png"></span> 
-                        <input type="text" size="19" name="current_stock" id="current_stock" disabled='true' class="mini disabled inventory_product_search">
+                        <input style="color:black;" type="text" size="19" name="current_stock" id="current_stock" disabled='true' class="mini disabled inventory_product_search">
                          <span class="hide_mobile help-block">Quantidade atual do produto em estoque</span>
                       </div>
                     </div>
@@ -233,7 +233,7 @@
                             <!-- o clique na figura ta abrindo o calendario e deixando alterar                        
                             <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
                             -->
-                            <input type="text" size="19" name="start" id="start" class="input-small date" disabled/>
+                            <input style="color:black;" type="text" size="19" name="start" id="start" class="input-small date" disabled/>
                           </div>
                       </div>
                     </div>
@@ -385,7 +385,7 @@
                     <div class="inline-inputs">
                       <div style="float:left; padding-right:10px" class="input-prepend">
                         <span class="add-on hide_mobile"><img width="16" src="/images/categorie.png"></span> 
-                        <input type="text" size="19" name="current_stock" id="current_stock" disabled='true' class="mini disabled inventory_product_2search2">
+                        <input  style="color:black;" type="text" size="19" name="current_stock" id="current_stock" disabled='true' class="mini disabled inventory_product_2search2">
                          <span class="hide_mobile help-block">Quantidade atual do produto em estoque</span>
                       </div>
                     </div>
@@ -399,11 +399,11 @@
                       <div class="inline-inputs">
                           <div style="float:left; padding-right:10px" class="input-prepend">
                             <span class="add-on  hide_mobile"><img width="16" src="/images/clock.png"></span>
-                            <input type="text" size="19" name="hour_start_edit" id="hour_start_edit" disabled='true' class="mini time"/>
+                            <input style="color:black;" type="text" size="19" name="hour_start_edit" id="hour_start_edit" disabled='true' class="mini time"/>
                           </div>
                           <div style="float:left; padding-right:10px" class="input-prepend">
                             <span class="add-on  hide_mobile"><img width="16" src="/images/clock.png"></span>
-                            <input type="text" size="19" name="hour_end_edit" id="hour_end_edit" disabled='true' class="mini time"/>
+                            <input style="color:black;" type="text" size="19" name="hour_end_edit" id="hour_end_edit" disabled='true' class="mini time"/>
                           </div>
                       </div>
                     </div>
