sales and commission - edit user instead of customer

--- a/src/main/webapp/financial_admin/sales_and_commission.html
+++ b/src/main/webapp/financial_admin/sales_and_commission.html
@@ -20,7 +20,7 @@
       type: "format",
       decode: function(name, row) {
         customers.push(row[0]);
-        return "<a href='/customer/edit?id=" + row[0] + "' target='_customer_maste'>" + name + "</a>";
+        return "<a href='/user/edit?id=" + row[0] + "' target='_user_maste'>" + name + "</a>";
       }
     }
     if (!hasUnitModule) {
