cashier_report - docs caixas fechados

--- a/src/main/webapp/financial_cashier/cashier_report.html
+++ b/src/main/webapp/financial_cashier/cashier_report.html
@@ -174,5 +174,7 @@
         $("#grid").tablesorter();
       });
     </script>
- </div>
+  <br>
+  Este relatório inclui apenas os caixas fechados.
+</div>
  
