--- a/src/main/webapp/quiz_admin/edit_question.html
+++ b/src/main/webapp/quiz_admin/edit_question.html
@@ -137,6 +137,22 @@
               </div>
           </div>
           <div class="clearfix">
+              <label for="quizQuestionLabelStyle">Label Html Style</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <textarea class="xlarge" id="quizQuestionLabelStyle" name="quizQuestionLabelStyle" size="16"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="clearfix">
+              <label for="quizQuestionAddonStyle">Addon Html Style</label>
+              <div class="input">
+                <div class="input-prepend">
+                  <textarea class="xlarge" id="quizQuestionAddonStyle" name="quizQuestionAddonStyle" size="16"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="clearfix">
               <label for="obs">Observação</label>
               <div class="input">
                 <div class="input-prepend">
