user_command mobile improvements

--- a/src/main/webapp/command_full/user_command_full.html
+++ b/src/main/webapp/command_full/user_command_full.html
@@ -56,13 +56,13 @@
               <div class="input">
                 <div class="inline-inputs">
                   <div style="float:left; padding-right:10px" class="input-prepend">
-                    <a class="btn primary" id="new">Inserir novo</a>
+                    <a class="btn primary btdim1" id="new">Novo</a>
                   </div> 
                   <div style="float:left; padding-right:10px" class="input-prepend">
-                    <input id="send" value="Buscar" class="btn success" type="button">
+                    <input id="send" value="Buscar" class="btn success btdim1" type="button">
                   </div>
                   <div class="input">
-                    <input id="forget" value="Esquecer" class="btn danger hide_mobile" type="button" title="Clique aqui para limpar suas informações e sua senha">
+                    <input id="forget" value="Esquecer" class="btn danger hide_mobile btdim1" type="button" title="Clique aqui para limpar suas informações e sua senha">
                   </div>
                 </div>
               </div>
