--- a/src/main/webapp/manager/index.html
+++ b/src/main/webapp/manager/index.html
@@ -61,6 +61,11 @@
             <img width='32' src="/images/line_chart.png"/>
           </a>
         </li>
+        <li>
+          <a href="/customer/treatments_cross" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de mensalidade." data-original-title="mensalidades">
+            <img width='32' src="/images/line_chart.png"/>
+          </a>
+        </li>
       </ul>    
     </span>
     <span class="span3">
