busy event - showing audit and workhour

--- a/src/main/webapp/activity/busy_manager.html
+++ b/src/main/webapp/activity/busy_manager.html
@@ -61,7 +61,8 @@
       <th>Início</th>
       <th>Fim</th>
       <th>Descrição</th>
-      <th>Ações</th>
+      <th title="Indica horário de trabalho ou bloqueio eventual caso contrário">H Trab</th>
+      <th>Ações...</th>
     </thead>
     <tbody>
     </tbody>
