--- a/src/main/webapp/financial_admin/commission_report.html
+++ b/src/main/webapp/financial_admin/commission_report.html
@@ -103,7 +103,7 @@
       var total_commission = 0.00;
       var user = $('#user').val()
       if (!user) {
-        alert("Profissional inválido!")
+        alert("Selecione um Profissional!")
         return
       }
       // false pq aqui não são as pendentes (futuro) 
