--- a/src/main/webapp/manager/index.html
+++ b/src/main/webapp/manager/index.html
@@ -62,8 +62,8 @@
           </a>
         </li>
         <li>
-          <a href="/customer/treatments_cross" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de mensalidade." data-original-title="mensalidades">
-            <img width='32' src="/images/line_chart.png"/>
+          <a href="/customer/treatments_cross" class="_popover" target="_blancccck" rel="popover" data-content="Relatório de Agenda Dia a Dia." data-original-title="Agenda Dia a Dia">
+            <img width='32' src="/images/calendar_addon.png"/>
           </a>
         </li>
       </ul>    
