--- a/src/main/webapp/customer/treatments_cross.html
+++ b/src/main/webapp/customer/treatments_cross.html
@@ -1,18 +1,12 @@
 <div id="main" class="lift:surround?with=calendar;at=content">
   <link rel="stylesheet" type="text/css" href="/select2/select2.css" />
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-  <script type="text/javascript">
-    google.load("visualization", "1", {packages:["corechart"]});
-  </script>
   <script src="/select2/select2.js"></script><script src="/select2/select2_locale_pt-BR.js"></script>
   <script src="/js/reports.js"></script>
   <script src="/js/jquery.tablesorter.pager.js"></script>
-  <script type="text/javascript" src="/js/product_line.js">
-  </script>
-  <script type="text/javascript" src="/js/product_control_panel.js">
-  </script>
   <script type="text/javascript">
   $(function(){
+    $("#user").userField();
     $("#unit").unitField(true,false);
     $("#accounts").categoryAccountField(true, false, true, true);
     $("#start").val(getDateBr(new Date()));
@@ -20,16 +14,14 @@
     var fields = [];
     var url = "/report/treatments_cross";
     var request = function(){
-      renderReport(url,fields,$("#form_report").serializeObject(),"#grid",function(){},true,"text","Clientes",true);
+      var user = $('#user').val()
+      if (!user) {
+        alert("Selecione um Profissional!")
+        return
+      }
+      renderReport(url,fields,$("#form_report").serializeObject(),"#grid",function(){},true,"text","Horas",false);
     }
     $("#send").click(request);
-    DataManager.getUsers(function(userObj){
-      user_str = "";
-      for(var i in userObj){
-            user_str += "<option value='"+userObj[i].id+"'>"+userObj[i].name+"</option>";
-        }
-        $("#user").html(user_str);     
-    });
     DataManager.getActivities(function(userObj){
       user_str = "";
       for(var i in userObj){
@@ -39,11 +31,16 @@
     });    
   });  
   </script>
+  <h1>
+    <span class="lift:CompanySnippet.thumb"> </span>
+    <input class="report_title local_storage" id="title_treatment_cross" name="title_treatment_cross" size="30" type="text" value="Agenda Profissional Dia a Dia"/>
+  </h1>
+  <a id="hide_arguments" onclick="$('#form_report').toggle();return false;" 
+    href="#" class="btn excel_buttton" 
+    title="Ocultar argumentos">
+    <img style="width: 16px;" src="/images/collapse.png" />
+  </a>  
   <form id="form_report" class="well form-search" method='get'>
-    <h1>
-      <span class="lift:CompanySnippet.thumb"> </span>
-      <input class="report_title local_storage" id="title_monthly_report" name="title_monthly_report" size="30" type="text" value="Relatório de Boletos Mês a Mês"/>
-    </h1>
     <span class='row'>
       <span class='span8'>
         <div class="clearfix">
@@ -61,7 +58,7 @@
             </div>
           </div>
         </div>
-        <div class="clearfix">
+        <!--div class="clearfix">
           <label for="rel_paid">
             Pagas? 
           </label>
@@ -71,6 +68,13 @@
                 <span class="help-block">Mostrar as mensalidades pagas</span>
               </div>
             </div>
+        </div-->
+        <div class="clearfix">
+            <label for="user"><span data-i18n='Profissional'></span></label>
+            <div class="input">
+            <select class="local_storage" id='user' name="user">
+            </select>
+          </div>
         </div>
         <div class="clearfix">
           <label for="unit">Unidade </label>
@@ -84,6 +88,16 @@
         </div>
       </span>
       <span class='span8'>
+        <div class="clearfix">
+          <label for="minutes">Minutos</label>
+            <div class="input">
+              <div class="inline-inputs">
+                <div style="float:left; padding-right:10px" class="input-prepend">
+                  <input type="text" class="input-mini local_storage" id='minutes' name="minutes" placeholder="minutos" value="60"/>
+                </div>
+              </div>
+            </div>
+        </div>
         <div class="clearfix">
           <label for="category_select">Tipos</label>
           <div class="input">
