--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -12,7 +12,7 @@
     <span class="lift:CompanySnippet.thumb"> </span>
     <input class="report_title local_storage" id="title_treatments_conferenc_report" name="title_treatments_conferenc_report" size="30" type="text" value="Resumo Atendimento Cliente"/>
   </h1>
-  <a id="hide_arguments" onclick="$('#form_search').toggle();return false;" 
+  <a id="hide_arguments" onclick="$('#form_report').toggle();return false;" 
     href="#" class="btn excel_buttton" 
     title="Ocultar argumentos">
     <img style="width: 16px;" src="/images/collapse.png" />
