product/activity itensperpage

--- a/src/main/webapp/activity/list.html
+++ b/src/main/webapp/activity/list.html
@@ -28,6 +28,12 @@
 			      <select size="30" id="productType" class='local_storage' name="productType">
 			      </select>					       						    
 			    </span>
+			    <span class='label-inline'>
+			    	Itens por Página
+			    </span>
+			    <span class='select-inline'>
+			      <input class="mini local_storage" id="itenspp_activity" name="itenspp_activity" value="20">
+				</span>
 				<input class="all" id="all" name="all" type="checkbox"/> Mostrar todos?
 				<input class="btn success" type="submit" value="Buscar">
 			</form>
