financial - deleting recurrence - help

--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -196,7 +196,7 @@
             <a id="b_dre_send" class="btn success b_dre_send">
               Ver DRE
             </a>
-            <a id="b_remove_checked" class="lift:SecuritySnippet.isNotAdminRead btn danger b_remove_checked" alt="Excluir as contas marcadas">
+            <a id="b_remove_checked" class="lift:SecuritySnippet.isNotAdminRead btn danger b_remove_checked" alt="Excluir as contas marcadas. Para excluir analisando a recorrência use a lixeira no final da linha do lançamento desejado">
               Excluir
             </a>
             <a id="b_mark_as_paid" class="lift:SecuritySnippet.isNotAdminRead btn b_mark_as_paid" alt="Marcar todos os itens selecionados como pagos">
@@ -287,7 +287,7 @@
       <a id="b_dre_send" class="btn success b_dre_send">
         Ver DRE
       </a>
-      <a id="b_remove_checked" class="lift:SecuritySnippet.isNotAdminRead btn danger b_remove_checked" alt="Excluir as contas marcadas">
+      <a id="b_remove_checked" class="lift:SecuritySnippet.isNotAdminRead btn danger b_remove_checked" alt="Excluir as contas marcadas. Para excluir analisando a recorrência use a lixeira no final da linha do lançamento desejado">
         Excluir
       </a>
       <a id="b_mark_as_paid" class="lift:SecuritySnippet.isNotAdminRead btn b_mark_as_paid" alt="Marcar todos os itens selecionados como pagos">
