modules report - status local storage

--- a/src/main/webapp/manager/modules.html
+++ b/src/main/webapp/manager/modules.html
@@ -34,12 +34,12 @@
         </h1>
         <div class="row">
           <div class="clearfix">
-            <label for="status">
+            <label for="pm_status">
               Mostrar Todas? 
             </label>
               <div class="input">
                 <div class="inline-inputs">
-                  <input class="url_parameter" name="status" id='status' type='checkbox' />
+                  <input class="url_parameter local_storage" name="pm_status" id='pm_status' type='checkbox' />
                   <span class="help-block">Mostrar módulos inativos</span>
                 </div>
               </div>
